# bitlab2

./: .dockerignore  Cargo.toml  Dockerfile  fly.toml
src/: catalog.rs  cinemeta.rs  main.rs  scraper.rs  stremio.rs
