[package]
name = "bitlab"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["cors"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
reqwest = { version = "0.12.3", features = ["json"] }
scraper = "0.19.0"
regex = "1.10.4"
urlencoding = "2.1.3"
lava_torrent = "0.11.1"
anitomy = "0.2.0"
